--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-crewAI
 pandas
 numpy
 mdpd
+crewAI
 langchain_community
-langchain_ibm
-ibm-watsonx-ai
 duckduckgo-search
+langchain
+langchain-experimental
+langchain-core
+langchain-ibm
+ibm-watsonx-ai
+typing
 crewai-tools
+pydantic
+configparser
 streamlit
-
 tm1py
+python-dotenv
 chromadb<=0.5.3
