--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-streamlit
-crewAI
-pandas
-numpy
-mdpd
-langchain_community
-duckduckgo-search
-langchain
-langchain-experimental
-langchain-core
-langchain-ibm
-ibm-watsonx-ai
+streamlit==1.40.2
+crewAI==0.80.0
+pandas==2.1.4
+numpy==1.26.4
+mdpd==0.2.1
+langchain_community==0.3.8
+duckduckgo-search==6.3.7
+langchain==0.3.9
+langchain-experimental==0.3.3
+langchain-core==0.3.21
+langchain-ibm==0.3.5
+ibm-watsonx-ai==1.1.24
 typing
-crewai-tools
-pydantic
+crewai-tools==0.14.0
+pydantic==2.10.2
 configparser
-tm1py
-python-dotenv
+tm1py==2.0.4
+python-dotenv==1.0.1
 chromadb<=0.5.3
