--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,18 @@ streamlit==1.40.2
 crewAI
 pandas==2.1.4
 numpy==1.26.4
-mdpd==0.2.1
-langchain_community==0.3.8
-duckduckgo-search==6.3.7
-langchain==0.3.9
-langchain-experimental==0.3.3
-langchain-core==0.3.21
-langchain-ibm==0.3.5
-ibm-watsonx-ai==1.1.24
+mdpd
+langchain_community
+duckduckgo-search
+langchain
+langchain-experimental
+langchain-core
+langchain-ibm
+ibm-watsonx-ai
 typing
-crewai-tools==0.14.0
-pydantic==2.10.2
+crewai-tools
+pydantic
 configparser
-tm1py==2.0.4
-python-dotenv==1.0.1
+tm1py
+python-dotenv
 chromadb<=0.5.3
-SQLAlchemy==1.4.0
