--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+WATSONX_URL=https://us-south.ml.cloud.ibm.com/
 WATSONX_PROJECT_ID=676c7e36-db45-4ebd-bb23-6a7824b815b4
 WATSONX_APIKEY=rRQSWj0DA1hVRmYpqMpJf3sdNp4mwIOkSZ7-bgxM0JDo
 SERPER_API_KEY=403b3ca82dcc45cb79337d3c815782f2930988a1
