--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ crewAI
 pandas==2.1.4
 numpy==1.26.4
 mdpd
-langchain_community
+langchain_community==0.3.8
 duckduckgo-search
-langchain
-langchain-experimental
-langchain-core
+langchain==0.3.15
+langchain-experimental==0.3.3
+langchain-core==0.3.21
 langchain-ibm
 ibm-watsonx-ai==1.1.24
 typing
